[package]
name = "terra"
description = "Front page of Skyland-infused World of Warcraft servers"
version = "0.1.0-3"
license = "Proprietary"
edition = "2018"

[dependencies]
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.7"
lazy_static = "1"
regex = "1"
glob = "0.3"
byteorder = "1"
base64 = "0.12"
bitflags = "1"
futures-util = "0.3"
chrono = "0.4"
time = "0.2"
url = "2"
comrak = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
ring = "0.16"
rust-argon2 = "0.8"
maud = "0.21"
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "postgres", "mysql", "chrono"] }
cookie = "0.13"
http = "0.2"
warp = "0.2"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
terra = { path = "/usr/sbin/terra" }

[package.metadata.rpm.files]
"terra.service" = { path = "/usr/lib/systemd/system/terra.service" }
