[package]
name = "terra"
description = "REST API for Skyland-infused World of Warcraft servers"
version = "2.0.2"
license = "Proprietary"
edition = "2018"

[dependencies]
thiserror = "1"
anyhow = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.7"
fallible-iterator = "0.2"
async-ctrlc = "1"
regex = "1"
bitflags = "1"
futures = "0.3"
comrak = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
ring = "0.16"
http = "0.2"
warp = "0.2"

[dependencies.tokio]
version = "0.2"
features = ["rt-threaded", "macros", "blocking"]

[dependencies.sqlx]
path = "../sqlx"
default-features = false
features = ["runtime-tokio", "macros", "mysql", "json"]
